syntax = "proto3";

package book;
option go_package ="/app/protos/";

import "google/api/annotations.proto";


service Student {
    rpc Login(LoginRequestBody) returns(LoginResponseBody){
        option (google.api.http) = {
            post : "/auth/student/login"
        };
    }
    rpc TokenValidation(Token) returns(GetTokenResponseBody){
        option (google.api.http) = {
            get : "/auth/student/get"
        };
    }
    rpc SignUp(SignUpRequestBody) returns(SignUpResponseBody){
        option (google.api.http) = {
            post : "/auth/student/signup"
        };
    }
}

message LoginRequestBody {
    string username = 1;
    string password = 2;
}

message LoginResponseBody {
    int32 id = 1;
    string msg = 2;
    string token = 3;
}

message GetTokenResponseBody {
    int32 id = 1;
    string message = 2;
}

message Token {
   string token = 1;
   int32 expiration_time = 2;
   
}

message SignUpRequestBody {
    string username = 1;
    string password = 2;
}

message SignUpResponseBody {
    int32 id = 1;
    string msg = 2;
}

